<resources>
    <string name="stringAppName">SocialPocket</string>
    <string name="inputUsername">Username</string>
    <string name="inputPassword">Password</string>
    <string name="buttonLogin">Login now</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="cameraLogin">Login with face recognition</string>
    <string name="divider">or</string>
    <string name="singup">Dont have an account?</string>
    <string name="forgotPasswordText">Enter your email below to receive a reseted password</string>
    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="register">Registration</string>
    <string name="retype">Retype password</string>
    <string name="buttonRegister">Register now</string>
    <string name="syncTitle">Synchronization</string>
    <string name="syncTwitter">Connect to Twitter</string>
    <string name="syncFacebook">Connect to Facebook</string>
    <string name="syncInstagram">Connect to Instagram</string>
    <string name="addFace">Setup face login</string>
    <string name="btn_continue">Continue</string>
    <string name="facebookSuccess">Facebook successfully synchronized</string>
    <string name="twitterSuccess">Twitter successfully synchronized</string>
    <string name="instagramSuccess">Instagram successfully synchronized</string>
    <string name="faceAdded">Face successfully added</string>
    <string name="capture">Capture</string>
    <string name="syncText">Please synchronize your facebook and twitter account with application</string>

    <string name="facebook_app_id">415720455685948</string>
    <string name="fb_login_protocol_scheme">fb415720455685948</string>

    <string name="facexID">fac5027d654c1957afbb</string>
    <string name="facexKey">5c3ce5b254e6cd170720</string>
</resources>
